Refactor order repositories: replace List with ConcurrentMap for thread-safe order and pancake management, and update related methods for improved performance