@@ -3,29 +3,30 @@ package org.pancakelab.repository.impl;
 import org.pancakelab.model.pancakes.PancakeRecipe;
 import org.pancakelab.repository.PancakeRepository;
 
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.ConcurrentLinkedDeque;
 
 public class InMemoryPancakeRepository implements PancakeRepository {
-
-    private final Map<UUID, List<PancakeRecipe>> orderPancakes = new ConcurrentHashMap<>();
+    // Thread-safe map of orderId → Deque of PancakeRecipe
+    private final Map<UUID, ConcurrentLinkedDeque<PancakeRecipe>> orderPancakes = new ConcurrentHashMap<>();
 
     @Override
     public List<String> viewOrderPancakes(UUID orderId) {
-        return orderPancakes.getOrDefault(orderId, Collections.emptyList())
-                .stream()
+        var deque = orderPancakes.get(orderId);
+        if (deque == null) return List.of();
+        return deque.stream()
                 .map(PancakeRecipe::description)
                 .toList();
     }
 
     @Override
     public int addPancake(UUID orderId, PancakeRecipe pancake) {
-        if (!orderPancakes.containsKey(orderId)) {
-            orderPancakes.put(orderId, new ArrayList<>());
-        }
-        orderPancakes.get(orderId).add(pancake);
-        return orderPancakes.get(orderId).size();
+        var deque = orderPancakes.computeIfAbsent(orderId, id -> new ConcurrentLinkedDeque<>());
+        deque.add(pancake);
+        return deque.size();
     }
 
     @Override
@@ -35,31 +36,25 @@ public class InMemoryPancakeRepository implements PancakeRepository {
 
     @Override
     public int removePancakes(UUID orderId, String description, int count) {
-        List<PancakeRecipe> list = orderPancakes.get(orderId);
-        if (list == null || list.isEmpty()) {
-            return 0;
-        }
+        var deque = orderPancakes.get(orderId);
+        if (deque == null || deque.isEmpty()) return 0;
 
-        AtomicInteger removedCount = new AtomicInteger(0);
-        Iterator<PancakeRecipe> iter = list.iterator();
-
-        while (iter.hasNext() && removedCount.get() < count) {
-            PancakeRecipe p = iter.next();
-            if (p.description().equals(description)) {
-                iter.remove();
-                removedCount.incrementAndGet();
+        int removed = 0;
+        for (var it = deque.iterator(); it.hasNext() && removed < count; ) {
+            if (it.next().description().equals(description)) {
+                it.remove();
+                removed++;
             }
         }
-
-        if (list.isEmpty()) {
-            orderPancakes.remove(orderId);
+        if (deque.isEmpty()) {
+            orderPancakes.remove(orderId, deque);
         }
-
-        return removedCount.get();
+        return removed;
     }
 
     @Override
     public int getPancakesCount(UUID orderId) {
-        return orderPancakes.getOrDefault(orderId, Collections.emptyList()).size();
+        var deque = orderPancakes.get(orderId);
+        return deque == null ? 0 : deque.size();
     }
 }
